--- a/core/src/main/resources/templates/assignment.html
+++ b/core/src/main/resources/templates/assignment.html
@@ -49,7 +49,7 @@
                             </td>
                             <td class="horizontal" width="100%">
                                 <a th:href="@{/assignment/course/{id}(id=${assignment.course})}" class="btn btnR" th:text="#{assignment.cancel}"></a>
-                                <button type="submit" class="btn btnB" th:text="#{assignment.submit}"></button>
+                                <button type="submit" class="btn btnB" th:text="#{assignment.grade-it}"></button>
                             </td>
                         </tr>
                     </tbody>
